entity_macros/tests/ui/derive/ent/missing-last_updated.stderr
error: No last_updated field provided
  --> $DIR/missing-last_updated.rs:4:1
   |
4  | / struct TestEnt {
5  | |     #[ent(id)]
6  | |     id: Id,
7  | |
...  |
12 | |     created: u64,
13 | | }
   | |_^
